ET-4165 future prove document input for semantic search (#841)
Change `document_id: ..` to `document: { id: ... }` so that we later can also have `document: { text: ... }`.

**References:**

- Issue: [ET-4092]
- Story: [ET-4165]


[ET-4092]: https://xainag.atlassian.net/browse/ET-4092?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[ET-4165]: https://xainag.atlassian.net/browse/ET-4165?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
