# web-api/openapi/front_office.yaml
@@ -238,10 +238,10 @@ components:
               title: "News title"
     SemanticSearchRequest:
       type: object
-      required: [document_id]
+      required: [document]
       properties:
-        document_id:
-          $ref: './schemas/document.yml#/DocumentId'
+        document:
+          $ref: './schemas/document.yml#/InputDocument'
         count:
           $ref: '#/components/schemas/Count'
         published_after:
